--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "primeicons": "^5.0.0",
     "primereact": "^8.3.0",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.2",
     "react-hook-form": "^7.34.0",
